--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.7",
     "@next/font": "13.1.2",
+    "@uppy/core": "^3.0.4",
+    "@uppy/dashboard": "^3.2.0",
+    "@uppy/drag-drop": "^3.0.1",
+    "@uppy/file-input": "^3.0.1",
+    "@uppy/progress-bar": "^3.0.1",
+    "@uppy/react": "^3.0.2",
+    "@uppy/status-bar": "^3.0.1",
+    "axios": "^1.2.3",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-alice-carousel": "^2.7.0",
