--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.7",
+    "@material-tailwind/react": "^1.2.5",
     "@next/font": "13.1.2",
     "@uppy/core": "^3.0.4",
     "@uppy/dashboard": "^3.2.0",
