--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "@uppy/react": "^3.0.2",
     "@uppy/status-bar": "^3.0.1",
     "axios": "^1.2.3",
+    "firebase": "^9.16.0",
     "next": "13.1.2",
-    "next-auth": "^4.18.10",
     "react": "18.2.0",
     "react-alice-carousel": "^2.7.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.7.1",
     "react-new-window": "^1.0.1",
     "react-toastify": "^9.1.1",
