--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@uppy/status-bar": "^3.0.1",
     "axios": "^1.2.3",
     "firebase": "^9.16.0",
-    "next": "13.1.2",
+    "next": "^13.1.6",
     "react": "18.2.0",
     "react-alice-carousel": "^2.7.0",
     "react-dom": "18.2.0",
