--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@uppy/progress-bar": "^3.0.1",
     "@uppy/react": "^3.0.2",
     "@uppy/status-bar": "^3.0.1",
+    "@vercel/analytics": "^0.1.8",
     "axios": "^1.2.3",
     "firebase": "^9.16.0",
     "next": "^13.1.6",
