--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+   
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -33,6 +34,7 @@
     "react-icons": "^4.7.1",
     "react-new-window": "^1.0.1",
     "react-toastify": "^9.1.1",
+    "sitemap-generator": "^8.5.1",
     "styled-components": "^5.3.6",
     "tailwind": "^4.0.0"
   },
