--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-   
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -27,6 +26,7 @@
     "axios": "^1.2.3",
     "firebase": "^9.16.0",
     "next": "^13.1.6",
+    "pdf-lib": "^1.17.1",
     "react": "18.2.0",
     "react-alice-carousel": "^2.7.0",
     "react-dom": "18.2.0",
