feat: Add PDF to JPG conversion tool with drag-and-drop support and ZIP download functionality
- Implemented PDF to JPG conversion using pdf.js and JSZip.
- Added file upload and drag-and-drop capabilities for PDF files.
- Created a user-friendly interface for displaying converted images.
- Included progress tracking during conversion and success messages.
- Enabled downloading of all converted images as a ZIP file.
- Updated sitemap to include the new PDF to JPG converter page.
- Enhanced Tailwind CSS configuration with new slide-in animations.
- Refactored DropFileContainer to remove auto-download functionality and integrate AnimatedPDFPreview.
- Updated BaseOneLayout for improved layout handling.
- Added necessary dependencies: file-saver and jszip.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@uppy/status-bar": "^3.0.1",
     "@vercel/analytics": "^0.1.8",
     "axios": "^1.2.3",
+    "file-saver": "^2.0.5",
     "firebase": "^9.16.0",
+    "jszip": "^3.10.1",
     "next": "^13.1.6",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
